--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with:
+          node-version: lts/*
           cache: pnpm
 
       - name: Install dependencies
