--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,10 @@ on:
         required: false
         type: boolean
         default: false
+      build:
+        required: false
+        type: string
+        default: ''
 
 jobs:
   release:
@@ -43,6 +47,10 @@ jobs:
       - name: Install Dependencies
         run: pnpm i
         if: ${{ inputs.publish }}
+
+      - name: Build
+        run: ${{ inputs.build }}
+        if: ${{ inputs.build && inputs.publish }}
 
       - name: Update npm
         run: npm install -g npm@latest
