--- a/.github/workflows/release-commit.yml
+++ b/.github/workflows/release-commit.yml
@@ -2,6 +2,10 @@ name: Release Commit
 on:
   workflow_call:
     inputs:
+      install:
+        required: false
+        type: string
+        default: 'pnpm install'
       build:
         required: false
         type: string
@@ -36,7 +40,7 @@ jobs:
           cache: pnpm
 
       - name: Install dependencies
-        run: pnpm install
+        run: ${{ inputs.install }}
 
       - name: Build
         run: ${{ inputs.build }}
