--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -33,6 +33,11 @@ on:
         type: boolean
         default: false
 
+      skip-test:
+        required: false
+        type: boolean
+        default: false
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -70,6 +75,7 @@ jobs:
         node-version: [20, 22, 24]
       fail-fast: false
 
+    if: ${{ !inputs.skip-test }}
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout
