--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -1,16 +1,15 @@
 name: autofix.ci
 
 on:
+  push:
+    branches: [main]
+
   workflow_call:
     inputs:
-      install:
-        required: false
-        type: string
-        default: 'pnpm install'
       command:
         required: false
         type: string
-        default: 'pnpm run lint --fix'
+        default: pnpm run lint --fix
 
 jobs:
   autofix:
@@ -19,22 +18,8 @@ jobs:
       contents: read
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-        with:
-          persist-credentials: false
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4.1.0
-
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-          cache: pnpm
-
-      - name: Install dependencies
-        run: ${{ inputs.install }}
+      - name: Setup JS
+        uses: sxzz/workflows/setup-js@v1
 
       - name: Fix
         run: ${{ inputs.command }}
