--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -3,15 +3,10 @@ name: Coverage
 on:
   workflow_call:
     inputs:
-      install:
-        required: false
-        type: string
-        default: 'pnpm install'
-
       test:
         required: false
         type: string
-        default: 'pnpm run test --coverage'
+        default: pnpm run test --coverage
 
 jobs:
   coverage:
@@ -19,22 +14,8 @@ jobs:
     permissions:
       id-token: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-        with:
-          persist-credentials: false
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4.1.0
-
-      - name: Set node
-        uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-          cache: pnpm
-
-      - name: Install Dependencies
-        run: ${{ inputs.install }}
+      - name: Setup JS
+        uses: sxzz/workflows/setup-js@v1
 
       - name: Coverage
         run: ${{ inputs.test }}
