--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,10 +3,6 @@ name: Release
 on:
   workflow_call:
     inputs:
-      install:
-        required: false
-        type: string
-        default: 'pnpm install'
       publish:
         required: false
         type: boolean
@@ -26,31 +22,16 @@ jobs:
       id-token: write
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v5
+      - name: Setup JS
+        uses: sxzz/workflows/setup-js@v1
         with:
-          fetch-depth: 0
-          persist-credentials: false
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4.1.0
-
-      - name: Set node
-        uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-          cache: pnpm
-          registry-url: 'https://registry.npmjs.org'
+          fetch-all: true
 
       - name: Generate GitHub Changelog
         run: pnpx changelogithub
         continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Install Dependencies
-        run: ${{ inputs.install }}
-        if: ${{ inputs.publish }}
 
       - name: Build
         run: ${{ inputs.build }}
