--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -53,7 +53,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        node-version: [20, 22, 24]
+        node-version: [20, 22, 24, 25]
       fail-fast: false
 
     if: ${{ !inputs.skip-test }}
