--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -8,6 +8,11 @@ on:
         type: string
         default: pnpm run test --coverage
 
+      build:
+        required: false
+        type: string
+        default: pnpm run build
+
 jobs:
   coverage:
     runs-on: ubuntu-latest
@@ -16,6 +21,9 @@ jobs:
     steps:
       - name: Setup JS
         uses: sxzz/workflows/setup-js@v1
+
+      - name: Build
+        run: ${{ inputs.build }}
 
       - name: Coverage
         run: ${{ inputs.test }}
