--- a/setup-js/action.yml
+++ b/setup-js/action.yml
@@ -4,11 +4,11 @@ description: Setup JavaScript environment
 inputs:
   persist-credentials:
     description: Whether to configure the token or SSH key with the local git config
-    default: false
+    default: 'false'
 
   fetch-all:
     description: Whether to fetch all history for all branches and tags.
-    default: false
+    default: 'false'
 
   node-version:
     description: 'Version Spec of the version to use. Examples: 12.x, 10.15.1, >=10.15.0.'
@@ -16,7 +16,7 @@ inputs:
 
   auto-install:
     description: Whether to automatically install dependencies.
-    default: true
+    default: 'true'
 
   package-manager:
     description: 'Package manager to use. Examples: npm, yarn, pnpm.'
@@ -33,6 +33,7 @@ runs:
 
     - name: Install pnpm
       uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061 # v4.2.0
+      if: ${{ inputs.package-manager == 'pnpm' }}
 
     - name: Setup node
       uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
