--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches: [main]
 
+  pull_request:
+
   workflow_call:
     inputs:
       command:
@@ -20,6 +22,8 @@ jobs:
     steps:
       - name: Setup JS
         uses: sxzz/workflows/setup-js@v1
+        with:
+          no-frozen-lockfile: true
 
       - name: Fix
         run: ${{ inputs.command }}
