feat: release with tag

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "1.0.0",
   "private": true,
   "packageManager": "pnpm@10.24.0",
   "type": "module",
@@ -8,11 +9,13 @@
     "format": "prettier --write .",
     "typecheck": "echo skip typecheck",
     "build": "echo skip build",
-    "test": "echo skip test"
+    "test": "echo skip test",
+    "release": "bumpp && ./release.sh"
   },
   "devDependencies": {
     "@sxzz/eslint-config": "^7.4.0",
     "@sxzz/prettier-config": "^2.2.6",
+    "bumpp": "^10.3.2",
     "eslint": "^9.39.1",
     "prettier": "^3.7.3"
   },
