feat(release-commit): add `comment-package-manager` (#7)

--- a/.github/workflows/release-commit.yml
+++ b/.github/workflows/release-commit.yml
@@ -14,6 +14,10 @@ on:
         required: false
         type: string
         default: ''
+      comment-package-manager:
+        required: false
+        type: string
+        default: ''
 
 jobs:
   release:
@@ -28,4 +32,4 @@ jobs:
         run: ${{ inputs.build }}
 
       - name: Publish
-        run: pnpm dlx pkg-pr-new@0.0 publish --pnpm ${{ inputs.compact && '--compact' || '' }} ${{ inputs.packages }}
+        run: pnpm dlx pkg-pr-new@0.0 publish --pnpm ${{ inputs.compact && '--compact' || '' }} ${{ inputs.packages }} ${{ inputs['comment-package-manager'] && format('--packageManager={0}', inputs['comment-package-manager']) || '' }}
