chore: upgrade deps

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,4 @@
-ignoredBuiltDependencies:
-  - unrs-resolver
 strictDepBuilds: true
 trustPolicy: no-downgrade
+trustPolicyExclude:
+  - chokidar@4.0.3
